--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <!-- jquery -->
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <title>MONGO API</title>
 </head>
 <body>
   <h1>This is a mongodb Tutorial</h1>
   <h2>It will be a restful API and utilize the mongodb's native driver </h2>
-  
+  <form id="trainerForm" action="/api/create" method="POST">
+    <input type="text" name="name" id="name" placeholder="name">
+    <input type="number" name="age" id="age" placeholder="age">
+    <input type="text" name="city" id="city" placeholder="city">
+    <input type="submit">
+  </form>
+  <script>
+    $("#trainerForm").submit(function(e){
+      e.preventDefault()
+      var data = {}
+      data.name = $("#name").val()
+      data.age = parseInt($("#age").val(), 10)
+      data.city = $("#city").val()
+      console.log(data)
+      dataStr = JSON.stringify(data)
+
+      $.ajax({
+        type:"POST",
+        url:"/api/create",
+        data: dataStr,
+        // success: function(){
+        //   alert('form was submited')
+        // },
+      })
+    })
+
+  </script>
 </body>
 </html>
