created new template for rendering new trainer info

--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -20,13 +20,7 @@
     <input type="submit">
   </form>
 
-  {{range .}}
-    <h2>{{.Name}}</h2>
-    <h2>{{.Age}}</h2>
-    <h2>{{.City}}</h2>
-  {{end}}
-
-  <script>
+  {{/* <script>
     $("#trainerForm").submit(function(e){
       e.preventDefault()
       var data = {}
@@ -46,6 +40,6 @@
       })
     })
 
-  </script>
+  </script> */}}
 </body>
 </html>
